fix: align social icons

--- a/style.css
+++ b/style.css
@@ -51,8 +51,9 @@ body {
 
 
 .social-icons img {
-    width: 36px;
-    height: 36px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 
